jevoo/public/assets/css/style.css
/* ... */
.product-countdown .single-countdown:last-child {
  margin-right: 0;
}
.product-countdown--style-two {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
      -ms-flex-pack: start;
          justify-content: flex-start;
}

.product-details-des .product-countdown {
  margin: 20px 0 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
      -ms-flex-pack: start;
          justify-content: flex-start;
}

/*----- hot deals item start -----*/
/*------ Instagram Feed Area Start ------*/
.instagram-item {
  position: relative;
  z-index: 1;
}
.instagram-item:before {
  background-color: rgba(0, 0, 0, 0.4);
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: 0.4s;
  -o-transition: 0.4s;
  transition: 0.4s;
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  height: 100%;
  width: 100%;
}
.instagram-item .instagram-hvr-content {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transition: 0.4s;
  -o-transition: 0.4s;
  transition: 0.4s;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  z-index: 1;
}
.instagram-item .instagram-hvr-content span {
  color: #fff;
  margin-right: 20px;
}
.instagram-item .instagram-hvr-content span:last-child {
  margin-right: 0;
}
.instagram-item .instagram-hvr-content span i.fa {
  margin-right: 5px;
}
.instagram-item:hover:before {
  opacity: 1;
  visibility: visible;
}
.instagram-item:hover .instagram-hvr-content {
  opacity: 1;
  visibility: visible;
}

/*------ Instagram Feed Area End ------*/
.policy-list:not(:last-child) {
  margin-bottom: 40px;
}
@media only screen and (max-width: 767.98px) {
  .policy-list:not(:last-child) {
    margin-bottom: 25px;
  }
}
.policy-list a {
  color: #c29958;
}

.policy-title {
  margin-bottom: 10px;
}

/*------- common style css end -------*/
/*------- product item start -------*/
.product-item {
  overflow: hidden;
}
.product-item .color-categories {
  padding: 13px 0 6px;
}

.product-item:hover .product-thumb .sec-img, .product-list-item:hover .product-thumb .sec-img {
  opacity: 1;
  visibility: visible;
}
.product-item:hover .product-thumb .pri-img, .product-list-item:hover .product-thumb .pri-img {
  opacity: 0;
  visibility: hidden;
}
.product-item:hover .button-group a, .product-list-item:hover .button-group a {
  opacity: 1;
  visibility: visible;
  -webkit-transform: scale(1);
      -ms-transform: scale(1);
          transform: scale(1);
}
.product-item:hover .cart-hover, .product-list-item:hover .cart-hover {
  bottom: 15px;
  opacity: 1;
  visibility: visible;
}
.product-thumb {
  position: relative;
}
.product-thumb img {
  width: 100%;
  height: 250px;
  object-fit: cover;
  aspect-ratio: 1 / 1;
}
.product-thumb .sec-img {
  top: 0;
  left: 0;
  position: absolute;
  opacity: 0;
  visibility: hidden;
}
.product-caption {
  padding-top: 17px;
}
.product-caption .product-name {
  font-weight: 400;
  line-height: 1.2;
  padding-bottom: 8px;
}
.product-caption .product-name a {
  color: #222222;
  text-transform: capitalize;
}
.product-caption .product-name a:hover {
  color: #c29958;
}

.manufacturer-name {
  padding-bottom: 5px;
  line-height: 1;
}
.manufacturer-name a {
  font-size: 14px;
  line-height: 1;
  color: #777777;
  text-transform: capitalize;
}
.manufacturer-name a:hover {
  color: #c29958;
}

.color-categories {
  line-height: 1;
}
.color-categories li {
  display: inline-block;
  padding: 1px;
  border-radius: 50%;
  border: 1px solid #efefef;
  -webkit-transition: 0.4s;
  -o-transition: 0.4s;
  transition: 0.4s;
}
.color-categories li:hover {
  border-color: #c29958;
}
.color-categories li a {
  height: 12px;
  width: 12px;
  display: block;
  border-radius: 50%;
}

.c-lightblue {
  background-color: #b0c4de;
}

.c-darktan {
  background-color: #aa9e78;
}

.c-grey {
  background-color: #808080;
}

.c-gold {
  background-color: #FFD700;
}

.c-rosegold {
  background-color: #E0BFB8;
}

.c-brown {
  background-color: #964B00;
}

.button-group {
  right: 15px;
  top: 15px;
  position: absolute;
}
.button-group a {
  width: 38px;
  height: 38px;
  display: block;
  font-size: 18px;
  line-height: 42px;
  color: #222222;
  text-align: center;
  border-radius: 50%;
  margin-bottom: 10px;
  background-color: #fff;
  -webkit-transform: scale(0.6);
      -ms-transform: scale(0.6);
          transform: scale(0.6);
  -webkit-transition: 0.4s;
  -o-transition: 0.4s;
  transition: 0.4s;
  opacity: 0;
  visibility: hidden;
}
.button-group a span {
  display: block;
}
.button-group a:hover {
  color: #c29958;
}

.cart-hover {
  bottom: 0;
  left: 0;
  right: 0;
  position: absolute;
  text-align: center;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: 0.4s;
  -o-transition: 0.4s;
  transition: 0.4s;
}

.product-label {
  background: #c29958;
  border-radius: 20px;
  color: #fff;
  font-size: 12px;
  font-weight: 400;
  left: 20px;
  line-height: 1;
  min-width: 46px;
  padding: 4px 12px;
  position: absolute;
  text-align: center;
  text-transform: capitalize;
  z-index: 3;
}
.product-label span {
  display: block;
  margin-top: -1px;
}
.product-label.discount {
  background-color: #222222;
}
.product-label:nth-child(1) {
  top: 20px;
}
.product-label:nth-child(2) {
  top: 48px;
}

.ratings {
  color: #f9bd22;
  font-size: 14px;
}
.ratings span {
  margin-right: 3px;
}

.price-box {
  font-size: 15px;
  line-height: 1;
}
.price-regular {
  color: #c29958;
  font-weight: 500;
}
.price-old {
  color: #999;
  padding-left: 5px;
  font-weight: 300;
}

/*------- product item end -------*/
/*-------- product list item start --------*/
.product-list-item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
/* ... */

